--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
 
   <h1> AI 应用讲座</h1>
   <ul>
-    <li> <a href="https://yishuai.github.io/talk/ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月 </li>
-    <li> <a href="https://yishuai.github.io/talk/ai-solve/solve.html">AI 出主意</a>，北京皮村同心友好空间，2024 年 5 月 </li>
-    <li> <a href="https://yishuai.github.io/talk/ai-career/career.html">AI 帮工作</a>，北京皮村同心友好空间，2024 年 6 月 </li>
-    <li> <a href="https://yishuai.github.io/talk/ai-study/study.html">AI 助我学</a>，北京皮村同心友好空间，2024 年 7 月 </li>
-    <li> <a href="https://yishuai.github.io/talk/ai-self/self.html">AI 助我立</a>，北京皮村同心友好空间，2024 年 8 月 </li>
-    <li> <a href="https://yishuai.github.io/talk/ai-camp/camp.html">AI 智能和算法初探</a>，北京四中高一15班，2024 年 6 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-draw/draw.html">AI 帮我画</a>，2024 年 3 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-solve/solve.html">AI 出主意</a>，2024 年 5 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-career/career.html">AI 帮工作</a>，2024 年 6 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-study/study.html">AI 助我学</a>，2024 年 7 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-self/self.html">AI 助我立</a>，2024 年 8 月 </li>
   </ul>
 
   <h1> AI 技术讲座</h1>
   <ul>
+    <li> <a href="https://yishuai.github.io/talk/ai-camp/camp.html">AI 智能和算法初探</a>，北京四中高一15班，2024 年 6 月 </li>
     <li> <a href="https://bjtu-netcomm.github.io/ai/ai.html"> 中文版</a>，<a href="https://bjtu-netcomm.github.io/ai/aien.html"> 英文版</a>，<a href="https://space.bilibili.com/88039759/channel/collectiondetail?sid=415701">B站视频</a>，2022 年</li>
     <li> <a href="https://yishuai.github.io/cavideo/trans.html">人工智能技术的应用与创新</a>，国家铁路技术管理人才培训班，2020 年 </li>
-    <li> <a href="https://yishuai.github.io/cavideo/index.html" >人工智能和云计算在视频监控中的应用</a >，国家铁路综合视频监控管理培训班，2020 年 </li>
-    </ul>
+    <!-- <li> <a href="https://yishuai.github.io/cavideo/index.html" >人工智能和云计算在视频监控中的应用</a >，国家铁路综合视频监控管理培训班，2020 年 </li> -->
+  </ul>
+
+  <h1>讨论</h1>
+  <ul>
+    <li>央数智，智见·AI教育大家谈丨陈一帅：AI时代，我们这样培养孩子，<a href="https://mp.weixin.qq.com/s/SVqfRN-sQQttmez7mCs5mg">微信公众号</a>，2025 年 3 月</li>
+  </ul>
 
   <h1> 逻辑谬误讲座 </h1>
   <ul>
