--- a/ai-era/era.html
+++ b/ai-era/era.html
@@ -1,62 +1,81 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>在 AI 时代寻找工作的意义与学习的方向</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>在 AI 时代寻找生活的意义与方向</title>
+    <meta charset="UTF-8" />
   </head>
 
   <body>
+    <h1>在 AI 时代寻找生活的意义与方向</h1>
+    <p>光明教育，2025 年 7 月</p>
+    <p>陈一帅</p>
+    <p><a href="mailto:yschen@bjtu.edu.cn">yschen@bjtu.edu.cn</a></p>
+    <p>北京交通大学电子信息工程学院 · 网络智能实验室</p>
+    <p>链接：<a href="https://yishuai.github.io/talk/ai-era/ai-era.html">https://yishuai.github.io/talk/ai-era/ai-era.html</a></p>
 
-  <h1>在 AI 时代寻找工作的意义与学习的方向</h1>
+    <img src="fig/qrcode.png" alt="二维码" width="200" />
 
-  <p>光明教育，2025 年 7 月</p>
-  
-  <p>陈一帅</p>
-  <p><a href="mailto:yschen@bjtu.edu.cn">yschen@bjtu.edu.cn</a></p>
-  <p>北京交通大学电子信息工程学院 · 网络智能实验室</p>
+    <h2>讲座简介</h2>
+    <p>
+      本讲座面向青少年及其家长，讲述 AI 正在如何影响我们的生活、学习与工作，帮助大家在这个时代看清真正重要的事，并用 AI 成为更有力量的人。
+    </p>
 
-  <p>链接：<a href="https://yishuai.github.io/talk/ai-era/era.html">https://yishuai.github.io/talk/ai-era/era.html</a></p>
+    <h2>讲座结构</h2>
+    <ol>
+      <li><a href="index.html?p=0-open.md">开场白：AI 正在改变世界</a></li>
+      <li><a href="index.html?p=2-1-danger.md">AI 的操控与危险</a></li>
+      <ul>
+        <li><a href="index.html?p=2-3-wake.md">唤醒：夺回对自己的掌控感</a></li>
+        <li><a href="index.html?p=2-5-feel.md">感受力：幸福的源泉</a></li>
+        <li><a href="index.html?p=2-7-xinfu.md">我们心中的五大痛苦和办法</a></li>
+      </ul>
+      <li><a href="index.html?p=4-rolemodel.md">学历之外的行动者</a></li>
+      <ul>
+        <li><a href="index.html?p=5-problem.md">找到真正重要的问题</a></li>
+      </ul>
+      <li>AI 技术发展和前景</li>
+      <ul>
+        <li><a href="index.html?p=6-1-liupai.md">AI 的三大技术流派</a></li>
+        <li><a href="index.html?p=6-3-yongxian.md">涌现与改变者</a></li>
+        <li><a href="index.html?p=6-5-yishi.md">图灵奖得主的提醒</a></li>
+      </ul>
+      <li><a href="index.html?p=8-1-copilot.md">AI 是副驾驶，我们做主驾驶</a></li>
+      <ul>
+        <li><a href="index.html?p=8-2-drive.md">自动驾驶：不能把方向盘交出去</a></li>
+        <li><a href="index.html?p=8-3-learn.md">学习上的副驾驶</a></li>
+        <li><a href="index.html?p=8-5-develop.md">程序开发的副驾驶</a></li>
+        <li><a href="index.html?p=8-7-research.md">研究的副驾驶</a></li>
+        <li><a href="index.html?p=8-9-team.md">打造 AI 放大的小团队</a></li>
+      </ul>
+      <li> AI 时代的家长和老师</li>
+      <ul>
+        <li><a href="index.html?p=9-parent.md">AI 时代，父母的角色</a></li>
+        <li><a href="index.html?p=10-tutor.md">AI 时代，老师的角色</a></li>
+      </ul>
+      <li><a href="index.html?p=12-end.md">总结：带着问题出发，带着创造回来</a></li>
+    </ol>
 
-  <img src="fig/qrcode.png" alt="二维码" width="200">
-    
-  <h2>讲座简介</h2>
-  <p>
-    本讲座面向青少年及其家长，介绍在人工智能迅速发展的今天，青少年如何理解 AI、使用 AI、管理自己、提升判断力，并探索更自由的学习与更有意义的成长方式。
-  </p>
+    <h2>适用人群</h2>
+    <ul>
+      <li>希望用 AI 改变自己命运的青少年</li>
+      <li>不适应传统教育、却渴望学习的孩子</li>
+      <li>想理解孩子、支持孩子的父母</li>
+      <li>在思考教学转型的老师</li>
+    </ul>
 
-  <h2>讲座结构</h2>
-  <ol>
-    <li><a href="index.html?p=0-open.md">开场：这场变化和我们有关</a></li>
-    <li><a href="index.html?p=2-danger.md">AI 推荐与上瘾：刷不动、打不完、停不下来？</a></li>
-    <li><a href="index.html?p=4-rolemodel.md">他们也没上大学，但干得真棒！</a></li>
-    <li><a href="index.html?p=6-ask.md">不是会用 AI，更是会问、会判断</a></li>
-    <li><a href="index.html?p=8-copilot.md">当我们有目标，AI 就能做副驾驶: 一起做原本做不到的事</a></li>
-    <li><a href="index.html?p=10-tutor.md">父母和老师，仍然是不可替代的存在</a></li>
-    <li><a href="index.html?p=12-end.md">总结：带着问题出发，带着创造回来</a></li>
-  </ol>
+    <h2>推荐资源</h2>
+    <ul>
+      <li><a href="https://www.xiaoyuzhoufm.com/episode/684a49d9574f065721bb4108">播客：《在AI时代，我还是愿意闻到真的花香》</a></li>
+      <li><a href="https://chat.openai.com">ChatGPT</a> · <a href="https://m.tongyi.aliyun.com">通义千问</a></li>
+      <li><a href="https://github.com/remarkjs/remark">remark.js</a></li>
+    </ul>
 
-  <h2>适用人群</h2>
-  <ul>
-    <li>正在尝试学习 AI、编程、网页制作的青少年</li>
-    <li>对传统应试教育感到迷茫、想探索更多可能性的学生</li>
-    <li>希望理解孩子成长的家长</li>
-    <li>尝试转变教学方式的老师</li>
-  </ul>
-
-  <h2>相关链接</h2>
-  <ul>
-    <li>实务学堂，<a href="https://www.xiaoyuzhoufm.com/episode/684a49d9574f065721bb4108">在AI时代，我还是愿意闻到真的花香”**</a>，小宇宙博客，2025 年 6 月</li>
-    <li><a href="https://m.tongyi.aliyun.com">通义千问</a></li>
-    <li><a href="https://chat.openai.com">ChatGPT</a></li>
-  </ul>
-
-  <h2>致谢</h2>
-  <ul>
-    <li>实务学堂，欧阳艳琴校长、钱琳霖理事长的讨论</li>
-    <li>所有愿意理解孩子的家长</li>
-    <li>ChatGPT 与通义千问</li>
-    <li>开源AI工具社区</li>
-  </ul>
+    <h2>致谢</h2>
+    <ul>
+      <li>实务学堂：欧阳艳琴校长、钱琳霖理事长</li>
+      <li>北京交通大学 网络智能实验室</li>
+      <li>开源 AI 社区与教学工具作者</li>
+    </ul>
 
   </body>
 </html>
