--- a/ai-era/era.html
+++ b/ai-era/era.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>在 AI 时代寻找生活的意义与方向</h1>
-    <p>光明教育，2025 年 7 月</p>
+    <p>2025 年 7 月</p>
     <p>陈一帅</p>
     <p><a href="mailto:yschen@bjtu.edu.cn">yschen@bjtu.edu.cn</a></p>
     <p>北京交通大学电子信息工程学院 · 网络智能实验室</p>
@@ -15,12 +15,12 @@
 
     <img src="fig/qrcode.png" alt="二维码" width="200" />
 
-    <h2>讲座简介</h2>
+    <h2>简介</h2>
     <p>
       本讲座面向青少年及其家长，讲述 AI 正在如何影响我们的生活、学习与工作，帮助大家在这个时代看清真正重要的事，并用 AI 成为更有力量的人。
     </p>
 
-    <h2>讲座结构</h2>
+    <h2>内容</h2>
     <ol>
       <li><a href="index.html?p=0-open.md">开场白：AI 正在改变世界</a></li>
       <li><a href="index.html?p=2-1-danger.md">AI 的操控与危险</a></li>
@@ -49,7 +49,7 @@
       </ul>
       <li> AI 时代的家长和老师</li>
       <ul>
-        <li><a href="index.html?p=9-parent.md">AI 时代，父母的角色</a></li>
+        <li><a href="index.html?p=9-parent.md">AI 时代，家长的角色</a></li>
         <li><a href="index.html?p=10-tutor.md">AI 时代，老师的角色</a></li>
       </ul>
       <li><a href="index.html?p=12-end.md">总结：带着问题出发，带着创造回来</a></li>
@@ -58,22 +58,19 @@
     <h2>适用人群</h2>
     <ul>
       <li>希望用 AI 改变自己命运的青少年</li>
-      <li>不适应传统教育、却渴望学习的孩子</li>
-      <li>想理解孩子、支持孩子的父母</li>
-      <li>在思考教学转型的老师</li>
+      <li>想在 AI 时代理解孩子、支持孩子的家长、老师</li>
     </ul>
 
     <h2>推荐资源</h2>
     <ul>
       <li><a href="https://www.xiaoyuzhoufm.com/episode/684a49d9574f065721bb4108">播客：《在AI时代，我还是愿意闻到真的花香》</a></li>
-      <li><a href="https://chat.openai.com">ChatGPT</a> · <a href="https://m.tongyi.aliyun.com">通义千问</a></li>
+      <li><a href="https://chat.openai.com">ChatGPT</a></li>
       <li><a href="https://github.com/remarkjs/remark">remark.js</a></li>
     </ul>
 
     <h2>致谢</h2>
     <ul>
       <li>实务学堂：欧阳艳琴校长、钱琳霖理事长</li>
-      <li>北京交通大学 网络智能实验室</li>
       <li>开源 AI 社区与教学工具作者</li>
     </ul>
 
