--- a/ai-era/era.html
+++ b/ai-era/era.html
@@ -39,13 +39,14 @@
         <li><a href="index.html?p=6-3-yongxian.md">涌现与改变者</a></li>
         <li><a href="index.html?p=6-5-yishi.md">图灵奖得主的提醒</a></li>
       </ul>
-      <li><a href="index.html?p=8-1-copilot.md">AI 是副驾驶，我们做主驾驶</a></li>
+      <li>AI 是副驾驶，我们做主驾驶</li>
       <ul>
-        <li><a href="index.html?p=8-2-drive.md">自动驾驶：不能把方向盘交出去</a></li>
-        <li><a href="index.html?p=8-3-learn.md">学习上的副驾驶</a></li>
-        <li><a href="index.html?p=8-5-develop.md">程序开发的副驾驶</a></li>
-        <li><a href="index.html?p=8-7-research.md">研究的副驾驶</a></li>
-        <li><a href="index.html?p=8-9-team.md">打造 AI 放大的小团队</a></li>
+        <li><a href="index.html?p=8-1-copilot.md">让强大的 AI 帮我们做原本做不到的事</a></li>
+        <li><a href="index.html?p=8-2-drive.md">即使是自动驾驶，也不能把方向盘交出去</a></li>
+        <li><a href="index.html?p=8-3-usage.md">AI 副驾驶使用指南</a></li>
+        <li><a href="index.html?p=8-5-develop.md">程序开发的 AI 副驾驶</a></li>
+        <li><a href="index.html?p=8-7-research.md">研究的 AI 副驾驶</a></li>
+        <li><a href="index.html?p=8-9-team.md">打造 AI 团队</a></li>
       </ul>
       <li> AI 时代的家长和老师</li>
       <ul>
