--- a/ai-era/era.html
+++ b/ai-era/era.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>在 AI 时代寻找生活的意义与方向</title>
+    <title>AI 崛起，我们该如何活？</title>
     <meta charset="UTF-8" />
   </head>
 
   <body>
-    <h1>在 AI 时代寻找生活的意义与方向</h1>
+    <h1>AI 崛起，我们该如何活？</h1>
+
+    <h2>成为主角：AI 时代的生活、学习与成长指南</h2>
+
     <p>2025 年 7 月</p>
     <p>陈一帅</p>
     <p><a href="mailto:yschen@bjtu.edu.cn">yschen@bjtu.edu.cn</a></p>
@@ -16,64 +19,81 @@
     <img src="fig/qrcode.png" alt="二维码" width="200" />
 
     <h2>简介</h2>
-    <p>
-      本讲座面向青少年及其家长，讲述 AI 正在如何影响我们的生活、学习与工作，帮助大家在这个时代看清真正重要的事，并用 AI 成为更有力量的人。
-    </p>
+    <p>AI 改变了世界，也正在改变我们的生活方式和成长路径。这场讲座帮助青少年和家长一起思考：我们该如何与 AI 共处，如何在剧变中保持自由意志和幸福感？</p>
+    <p>这是一场给青少年和家长的讲座。我们不只是谈 AI 的技术，更聊聊它如何影响我们的情绪、选择和未来。希望帮助每一位在这个时代感到迷茫的人，找到方向，用 AI 做副驾驶，成为自己人生的主角。</p>
 
-    <h2>内容</h2>
-    <ol>
-      <li><a href="index.html?p=0-open.md">开场白：AI 正在改变世界</a></li>
-      <li><a href="index.html?p=2-1-danger.md">AI 的操控与危险</a></li>
-      <ul>
-        <li><a href="index.html?p=2-3-wake.md">唤醒：夺回对自己的掌控感</a></li>
-        <li><a href="index.html?p=2-5-feel.md">感受力：幸福的源泉</a></li>
-        <li><a href="index.html?p=2-7-xinfu.md">我们心中的五大痛苦和办法</a></li>
-      </ul>
-      <li><a href="index.html?p=4-rolemodel.md">学历之外的行动者</a></li>
-      <ul>
-        <li><a href="index.html?p=5-problem.md">找到真正重要的问题</a></li>
-      </ul>
-      <li>AI 技术发展和前景</li>
-      <ul>
-        <li><a href="index.html?p=6-1-liupai.md">AI 的三大技术流派</a></li>
-        <li><a href="index.html?p=6-3-yongxian.md">涌现与改变者</a></li>
-        <li><a href="index.html?p=6-5-yishi.md">图灵奖得主的提醒</a></li>
-      </ul>
-      <li>AI 是副驾驶，我们做主驾驶</li>
-      <ul>
-        <li><a href="index.html?p=8-1-copilot.md">让强大的 AI 帮我们做原本做不到的事</a></li>
-        <li><a href="index.html?p=8-2-drive.md">即使是自动驾驶，也不能把方向盘交出去</a></li>
-        <li><a href="index.html?p=8-3-usage.md">AI 副驾驶使用指南</a></li>
-        <li><a href="index.html?p=8-5-develop.md">程序开发的 AI 副驾驶</a></li>
-        <li><a href="index.html?p=8-7-research.md">研究的 AI 副驾驶</a></li>
-        <li><a href="index.html?p=8-9-team.md">打造 AI 团队</a></li>
-      </ul>
-      <li> AI 时代的家长和老师</li>
-      <ul>
-        <li><a href="index.html?p=9-parent.md">AI 时代，家长的角色</a></li>
-        <li><a href="index.html?p=10-tutor.md">AI 时代，老师的角色</a></li>
-      </ul>
-      <li><a href="index.html?p=12-end.md">总结：带着问题出发，带着创造回来</a></li>
-    </ol>
+  <h2>内容</h2>
+  <ol>
+    <li>🌍 <a href="index.html?p=0-open.md">开场：世界正在改变，我们准备好了吗？</a></li>
 
-    <h2>适用人群</h2>
-    <ul>
-      <li>希望用 AI 改变自己命运的青少年</li>
-      <li>想在 AI 时代理解孩子、支持孩子的家长、老师</li>
-    </ul>
+    <li>🔒 AI：强大到令人担忧，但也值得期待
+      <ul>
+        <li><a href="index.html?p=2-3-wake.md">🧭 被算法困住的人生，怎么办？</a></li>
+        <li><a href="index.html?p=2-5-feel.md">💓 感受力，是幸福的开始</a></li>
+        <li><a href="index.html?p=2-7-xinfu.md">🛠️ 我们的五大痛苦，以及走出来的方法</a></li>
+      </ul>
+    </li>
 
-    <h2>推荐资源</h2>
-    <ul>
-      <li><a href="https://www.xiaoyuzhoufm.com/episode/684a49d9574f065721bb4108">播客：《在AI时代，我还是愿意闻到真的花香》</a></li>
-      <li><a href="https://chat.openai.com">ChatGPT</a></li>
-      <li><a href="https://github.com/remarkjs/remark">remark.js</a></li>
-    </ul>
+    <li>💡 <a href="index.html?p=4-rolemodel.md">与其学历光鲜，不如成为解决问题的人</a>
+      <ul>
+        <li><a href="index.html?p=5-problem.md">🔍 怎样找到“真正重要”的问题？</a></li>
+      </ul>
+    </li>
 
-    <h2>致谢</h2>
-    <ul>
-      <li>实务学堂：欧阳艳琴校长、钱琳霖理事长</li>
-      <li>开源 AI 社区与教学工具作者</li>
-    </ul>
+    <li>🔧 AI 背后的秘密：三种技术流派和未来趋势
+      <ul>
+        <li><a href="index.html?p=6-1-liupai.md">🧠 三大流派：类脑、统计、模仿</a></li>
+        <li><a href="index.html?p=6-3-yongxian.md">💥 涌现：当机器突然聪明了</a></li>
+        <li><a href="index.html?p=6-5-yishi.md">📣 图灵奖得主告诉我们要小心什么？</a></li>
+      </ul>
+    </li>
+
+    <li>🚗 把 AI 当副驾驶，但你必须握住方向盘
+      <ul>
+        <li><a href="index.html?p=8-1-copilot.md">🚀 AI 可以让我们做成原本做不到的事</a></li>
+        <li><a href="index.html?p=8-2-drive.md">🛑 即使自动驾驶，也不能把方向盘交出去</a></li>
+        <li><a href="index.html?p=8-3-usage.md">📘 使用 AI 的五条建议</a></li>
+        <li><a href="index.html?p=8-5-develop.md">👨‍💻 编程副驾驶：帮你写代码、搭网站</a></li>
+        <li><a href="index.html?p=8-7-research.md">📚 研究副驾驶：帮你查资料、写报告</a></li>
+        <li><a href="index.html?p=8-9-team.md">🤝 打造一个属于你的 AI 团队</a></li>
+      </ul>
+    </li>
+
+    <li>👨‍👩‍👧 如果你是父母或老师，这一章写给你
+      <ul>
+        <li><a href="index.html?p=9-parent.md">👪 AI 时代，家长怎样帮孩子不被困住？</a></li>
+        <li><a href="index.html?p=10-tutor.md">👩‍🏫 教师的价值，不是传知识，而是点火</a></li>
+      </ul>
+    </li>
+
+    <li>🎯 <a href="index.html?p=12-end.md">结束：带着问题出发，带着创造回来</a></li>
+  </ol>
+
+  <h2>适用人群</h2>
+  <ul>
+    <li>在 AI 冲击下，感到迷茫但渴望方向的每一个人</li>
+    <li>想更好理解 AI，并找到与它共处之道的人</li>
+    <li>希望不被技术控制，而是学会做人生“主驾驶”的青少年</li>
+    <li>想真正支持孩子成长的家长、教育者和心理工作者</li>
+    <li>对 AI 未来、教育、成长、幸福有思考的人</li>
+  </ul>
+
+  <h2>推荐资源</h2>
+
+  <ul>
+    <li>🎧 <a href="https://www.xiaoyuzhoufm.com/episode/684a49d9574f065721bb4108">播客：《在 AI 时代，我还是愿意闻到真的花香》</a> — 技术之外的温度思考</li>
+    <li>🤖 <a href="https://chat.openai.com">ChatGPT</a> — 一个人人都能使用的 AI 助手</li>
+    <li>🛠️ <a href="https://github.com/remarkjs/remark">remark.js</a> — 本网页使用的开源讲稿工具</li>
+  </ul>
+
+  <h2>致谢</h2>
+  <ul>
+    <li>实务学堂：欧阳艳琴校长、钱琳霖理事长，感谢你们的信任与鼓励</li>
+    <li>播客：《在 AI 时代，我还是愿意闻到真的花香》的听众和评论者。是你们的鼓励，让这个讲座有了意义</li>
+    <li>讲座内容中的真实案例与故事，来自许多匿名贡献者，感谢你们的勇敢与分享</li>
+    <li>开源 AI 社区与教学工具作者，让我们得以构建自由而强大的学习平台</li>
+    <li>特别感谢 Remark.js 等开源工具，使本网页得以自然呈现</li>
+  </ul>
 
   </body>
 </html>
