--- a/ai-era/era.html
+++ b/ai-era/era.html
@@ -19,8 +19,13 @@
     <img src="fig/qrcode.png" alt="二维码" width="200" />
 
     <h2>简介</h2>
-    <p>AI 改变了世界，也正在改变我们的生活方式和成长路径。这场讲座帮助青少年和家长一起思考：我们该如何与 AI 共处，如何在剧变中保持自由意志和幸福感？</p>
-    <p>这是一场给青少年和家长的讲座。我们不只是谈 AI 的技术，更聊聊它如何影响我们的情绪、选择和未来。希望帮助每一位在这个时代感到迷茫的人，找到方向，用 AI 做副驾驶，成为自己人生的主角。</p>
+    <p>
+      这是为每一个生活在 AI 时代的人准备的讲座。我们一起理解 AI 如何重塑学习、工作和人生选择，思考我们该如何与 AI 共处，在剧变中保持自由意志和幸福感？如何在技术洪流中找回方向，成为自己人生的主角。
+    </p>
+    <p>
+      无论你是青少年、家长、老师，还是对未来感到好奇的探索者，都能在这里找到对话与启发。我们不只是谈 AI 的技术，更聊聊它如何影响我们的情绪、选择和未来。
+    </p>
+    <p>希望帮助每一位在这个时代感到迷茫的人，找到方向，用 AI 做副驾驶，成为自己人生的主角。</p>
 
   <h2>内容</h2>
   <ol>
@@ -94,6 +99,8 @@
     <li>开源 AI 社区与教学工具作者，让我们得以构建自由而强大的学习平台</li>
     <li>特别感谢 Remark.js 等开源工具，使本网页得以自然呈现</li>
   </ul>
+
+  <p style="font-size: 0.9em; color: #777;">本页面内容可在署名下自由传播。感谢开源社区的支持。</p>
 
   </body>
 </html>
