--- a/ai-era/era.html
+++ b/ai-era/era.html
@@ -31,16 +31,18 @@
   <ol>
     <li>🌍 <a href="index.html?p=0-open.md">开场：世界正在改变，我们准备好了吗？</a></li>
 
-    <li>🔒 AI：强大到令人担忧，但也值得期待
+    <li>🔒 被 AI 操控，还是活出自己？
       <ul>
+        <li><a href="index.html?p=2-1-danger.md">AI 推荐与上瘾：刷不动、打不完、停不下来？</a></li>
         <li><a href="index.html?p=2-3-wake.md">🧭 被算法困住的人生，怎么办？</a></li>
         <li><a href="index.html?p=2-5-feel.md">💓 感受力，是幸福的开始</a></li>
         <li><a href="index.html?p=2-7-xinfu.md">🛠️ 我们的五大痛苦，以及走出来的方法</a></li>
       </ul>
     </li>
 
-    <li>💡 <a href="index.html?p=4-rolemodel.md">与其学历光鲜，不如成为解决问题的人</a>
-      <ul>
+    <li>🛠️ 别只追学历，成为能解决问题的人
+    <ul>
+        <li><a href="index.html?p=4-rolemodel.md">💡 与其学历光鲜，不如成为解决问题的人</a>
         <li><a href="index.html?p=5-problem.md">🔍 怎样找到“真正重要”的问题？</a></li>
       </ul>
     </li>
