--- a/ai-ziwo/ziwo.html
+++ b/ai-ziwo/ziwo.html
@@ -24,85 +24,108 @@
   <body>
     <header>
       <h1>在 AI 时代，如何找到自我？</h1>
-      <p class="meta">2025 年 · 蒲公英中学 · 面向校园与家庭共学</p>
+      <p class="meta">2025 年 · 蒲公英中学 · 面向校园、家庭与未来探索者</p>
       <img class="qrcode" src="fig/qrcode.png" alt="课程二维码" width="160" />
     </header>
 
     <main>
       <h2>课程简介</h2>
       <p>
-        这不是一堂“讲知识”的课，而是一场帮你<strong>看见自己</strong>的旅程：我们一起来寻找四个问题的答案：
-        <ul>
-            <li><span class="pill">我是谁？（认识自己）</span></li>
-            <li><span class="pill">我适合做什么？（认识世界）</span></li>
-            <li><span class="pill">我怎么做？（从现在开始，不断试错）</span></li>
-            <li><span class="pill">AI 可以帮我什么？（AI 会是你身边的“副驾驶”，但方向盘永远在你手里）</span></li>
-        </ul>
+        这是一次面向青少年与陪伴者的<strong>自我探索之旅</strong>。  
+        在快速变化的 AI 时代，很多人既充满好奇，又难免焦虑：我是谁？我适合做什么？未来要往哪走？  
+        本课程以三个关键问题为线索——
+        <span class="pill">认识自己</span>、
+        <span class="pill">认识世界</span>、
+        <span class="pill">不断试错</span> ——  
+        通过真实案例、职业地图、成长故事与 AI 的辅助，帮助你把好奇心变成方向，把迷茫化为行动。  
+        你会发现：AI 可以是你的副驾驶，但<strong>真正握住方向盘的人，永远是你自己</strong>。
       </p>
 
       <h2>你将获得</h2>
       <ul>
-        <li>一套“自我发现问题库”：兴趣 / 优势 / 价值 / 梦想（可直接课堂使用）</li>
-        <li>一个“我适合做什么”的清单 + AI 如何赋能、怎么入门</li>
-        <li>四个“成长故事”样板：从迷茫到自信的可参考榜样</li>
-        <li>一份“行动清单”：小步实践、允许试错、建立自己的成长记忆库</li>
+        <li>一份<strong>“自我发现问题库”</strong>：兴趣 / 优势 / 价值 / 梦想（课堂即用，带走一生）</li>
+        <li>一个<strong>“职业世界窗口”</strong>：从父母与身边人到未来新兴职业 + AI 如何赋能</li>
+        <li>四个<strong>蒲公英同学的成长故事</strong>：从迷茫到自信、从小尝试到大舞台</li>
+        <li>一套<strong>行动指南</strong>：小步实践、勇敢试错、建立属于自己的成长记忆库</li>
       </ul>
 
       <h2>课程结构</h2>
+      <p class="note">
+      👇  点击下方的章节标题，就能直接进入对应的 PPT 演示页面。  
+          你可以自由选择，从<strong>开场</strong>到<strong>总结</strong>，或是直接跳到你最感兴趣的部分。
+      </p>
       <ol>
-        <li>🌍 <a href="index.html?p=0-1-content.md">总览：今天我们要一起完成什么？</a></li>
+        <li>🌍 <a href="index.html?p=0-1-content.md">开场：世界正在改变，我们准备好了吗？</a></li>
+
+        <li>🌍 <a href="index.html?p=0-2-ai.md">AI 的基本原理：它很强大，但也有危险</a></li>
+
         <li>🎯 <a href="index.html?p=0-3-intro.md">导言：找到自我 = 认识自己 + 认识世界 + 行动与试错</a></li>
 
-        <li>🧭 <a href="index.html?p=0-5-whoami.md">认识自己：我是谁？喜欢 + 擅长 + 在乎 + 向往</a></li>
+        <li>🧭 <a href="index.html?p=0-5-whoami.md">认识自己：兴趣、优势、价值与梦想</a></li>
 
-        <li>🌟 <a href="index.html?p=3-0-list.md">认识世界：我未来做什么？在 AI 时代，打开人生的窗口！</a>
+        <li>🪟 <a href="index.html?p=3-0-list.md">认识世界：在 AI 时代，打开人生的窗口</a>
           <ul>
-            <li><a href="index.html?p=3-1-jianzhu-zhizao.md">🏗️ 建设与制造：把蓝图变成现实</a></li>
-            <li><a href="index.html?p=3-2-yunshu-peisong.md">🚚 运输与配送：让万物抵达彼此</a></li>
-            <li><a href="index.html?p=3-3-canyin-fuwu.md">🍜 餐饮与服务：烟火气与专业度</a></li>
-            <li><a href="index.html?p=3-4-qinjie-anquan.md">🧹 清洁与安全：城市的隐形守护</a></li>
-            <li><a href="index.html?p=3-5-zhaohu-jiankang.md">❤️ 照护与健康：被需要的温柔</a></li>
-            <li><a href="index.html?p=3-6-jiaoyu-xuexi.md">📚 教育与学习：点亮一颗星的力量</a></li>
-            <li><a href="index.html?p=3-7-shehui.md">🌍 公益与社会：把善意组织起来</a></li>
-            <li><a href="index.html?p=3-8-jinrong-qiye.md">💼 金融与企业：让资源流向真正需要</a></li>
-            <li><a href="index.html?p=3-9-keji.md">💻 科技与创新：用代码与好奇改变世界</a></li>
-            <li><a href="index.html?p=3-10-media-art.md">🎨 媒体与艺术：用声音与画面被看见</a></li>
-            <li>🎲 <a href="index.html?p=4-3-career-analysis.md">游戏时间：AI 猜你想做什么（四要素 → 做什么）</a></li>
+            <li><a href="index.html?p=3-1-jianzhu-zhizao.md">🏗️ 建设与制造：一砖一瓦，筑起城市的骨架</a></li>
+            <li><a href="index.html?p=3-2-yunshu-peisong.md">🚚 运输与配送：让世界真正流动起来</a></li>
+            <li><a href="index.html?p=3-3-canyin-fuwu.md">🍜 餐饮与服务：烟火气里的职业与温度</a></li>
+            <li><a href="index.html?p=3-4-qinjie-anquan.md">🧹 清洁与安全：城市背后无声的守护者</a></li>
+            <li><a href="index.html?p=3-5-zhaohu-jiankang.md">❤️ 照护与健康：守护生命的温柔职业</a></li>
+            <li><a href="index.html?p=3-6-jiaoyu-xuexi.md">📚 教育与学习：点亮一颗心灵的星光</a></li>
+            <li><a href="index.html?p=3-7-shehui.md">🌍 公益与社会：把善意组织成改变</a></li>
+            <li><a href="index.html?p=3-8-jinrong-qiye.md">💼 金融与企业：让资源流向真正需要的人</a></li>
+            <li><a href="index.html?p=3-9-keji.md">💻 科技与创新：用代码与好奇心改变世界</a></li>
+            <li><a href="index.html?p=3-10-media-art.md">🎨 媒体与艺术：用声音和画面被世界看见</a></li>
           </ul>
         </li>
 
-        <li>🧪 行动与试错
-          <ul>
-            <li><a href="index.html?p=4-5-popular.md">🌟 四种我们可能喜欢做的事：为什么它们有吸引力？</a></li>
-            <li><a href="index.html?p=4-7-case.md">📖 四个学长的旅程：找到自我、成长路径、最后绽放</a></li>
-            <li><a href="index.html?p=5-3-trial-error.md">🌈 行动与试错：错误不是耻辱，而是成长的路标</a></li>
-          </ul>
-        </li>
+        <li>🎲 <a href="index.html?p=4-3-career-analysis.md">互动游戏：AI 猜猜你适合什么职业？</a></li>
 
-        <li>✨ <a href="index.html?p=6-summary.md">总结与带走</a></li>
+        <li>🧪 <a href="index.html?p=5-3-trial-error.md">行动与试错：从小实践中找到真正的自己</a></li>
+
+        <li>📖 <a href="index.html?p=5-7-case.md">成长故事：四位蒲公英同学的自我发现之路</a></li>
+
+        <li>✨ <a href="index.html?p=6-summary.md">总结与带走：一句金句 + 一份行动清单</a></li>
       </ol>
-
-      <h2>适用人群</h2>
-      <ul>
-        <li>初中/高中同学：正在形成自我，需要看见更多可能与路径</li>
-        <li>家长与监护者：希望在 AI 时代有效陪伴、与孩子共学共长</li>
-        <li>一线教师/班主任/德育与生涯老师：需要可落地的课堂活动设计</li>
-        <li>志愿者/公益从业者：希望把资源与真实需求更好连接</li>
-        <li>对 AI、教育、成长、职业规划感兴趣的任何人</li>
-      </ul>
 
       <h2>课堂活动（建议）</h2>
       <ul>
-        <li>用 AI 做一次“职业猜想”现场演示（匿名投递三要素）</li>
-        <li>小组共创：我的“自我问题卡”与一个小实践计划</li>
-        <li>课后建立“成长记忆库”：作文、作品、演讲视频——期末复盘</li>
+        <li>🎲 <strong>AI 职业猜想游戏</strong>：学生匿名写下“最喜欢 / 最擅长 / 最在乎”，由 AI 生成职业推荐，课堂现场对比。</li>
+        <li>🧩 <strong>小组共创</strong>：分组完成“我的自我问题卡”，并分享一个立刻能做的小实践（如海报设计、公众号推送）。</li>
+        <li>📖 <strong>成长故事共鸣</strong>：阅读四位蒲公英同学的虚拟故事，写下“我从中得到的启发”。</li>
+        <li>📝 <strong>写给未来的信</strong>：每人写一封信，标题是“我最想成为的自己”，存入班级的“梦想盒子”。</li>
+        <li>📂 <strong>成长记忆库</strong>：建议每位同学建立一个“自我成长文件夹”，保存作文、作品、演讲，期末复盘分享。</li>
+      </ul>
+
+      <h2>适用人群</h2>
+      <ul>
+        <li>
+          <strong>初中 / 高中同学</strong>:
+          正在形成自我，需要发现兴趣与优势，想知道未来可能的方向。
+        </li>
+        <li>
+          <strong>家长与监护者</strong>:
+          想和孩子一起探索 AI 时代的可能性，寻找陪伴与支持的正确方式。
+        </li>
+        <li>
+          <strong>老师与教育者</strong>:
+          班主任、生涯老师、德育负责人：需要可落地的课堂活动与讨论工具。
+        </li>
+        <li>
+          <strong>志愿者 / 公益从业者</strong>:
+          关注打工子弟教育、乡村教育或青少年成长，希望用真实资源帮助孩子拓展眼界。
+        </li>
+        <li>
+          <strong>所有未来探索者</strong>:
+          对 AI、教育、职业规划感兴趣，渴望在变化中找到自我定位的人。
+        </li>
       </ul>
 
       <h2>推荐资源</h2>
       <ul>
-        <li>📚 生活与成长主题电影清单 —— 《哪吒》《寻梦环游记》《疯狂动物城》</li>
-        <li>🤖 ChatGPT / DeepSeek —— 与 AI 对话：聊职业路径、写反馈、做复盘</li>
-        <li>🛠️ remark.js —— 用 Markdown 做演示的开源工具</li>
+        <li>🎬 <strong>电影 & 故事灵感</strong> —— 《哪吒》《寻梦环游记》《疯狂动物城》，告诉我们：找到自我是不断试错的过程。</li>
+        <li>🤖 <strong>AI 工具体验</strong> —— ChatGPT / DeepSeek / 文心一言：用来写自我问题卡、职业猜想、未来信件。</li>
+        <li>🛠️ <strong>开源课堂工具</strong> —— <a href="https://github.com/remarkjs/remark">remark.js</a>，用 Markdown 就能轻松做演示。</li>
+        <li>📚 <strong>延伸阅读</strong> —— 被算法困住的人生、AI 时代的学习与成长相关书籍，帮助你把课堂思考延续到生活。</li>
       </ul>
 
       <h2>参考文献</h2>
@@ -113,18 +136,18 @@
 
       <h2>致谢</h2>
       <ul class="note">
-        <li>蒲公英中学全体师生与社团：谢谢你们让“自我发现”在校园里发生</li>
-        <li>家长与志愿者：你们的信任与时间，支撑起一代孩子的勇气</li>
-        <li>捐赠企业与社会支持者：真实职业样本与参访机会，拓宽了孩子们的世界</li>
-        <li>开源社区与工具作者（remark.js等）：让知识以最轻的方式抵达每个人</li>
-        <li>每一位分享故事的朋友：你们的经历，是孩子向前的灯</li>
+        <li>🌱 <strong>蒲公英中学的同学们</strong> —— 你们的好奇心和梦想，是这门课最初的火种。</li>
+        <li>👩‍🏫 <strong>老师与校长</strong> —— 谢谢你们守护孩子的成长，让课堂不仅是学习，更是点亮自我的地方。</li>
+        <li>👨‍👩‍👧 <strong>家长与志愿者</strong> —— 你们的陪伴和信任，让孩子敢于去尝试、去犯错、去找到自己。</li>
+        <li>🏢 <strong>捐赠企业与社会支持者</strong> —— 谢谢你们提供参访与资源，把真实的职业世界带到孩子眼前。</li>
+        <li>🌍 <strong>开源社区</strong> —— 感谢 remark.js 等工具作者，让知识以最轻的方式抵达每一个人。</li>
+        <li>💌 <strong>每一位分享故事的人</strong> —— 你们的经历，就是孩子们走向自我的灯塔。</li>
       </ul>
 
     </main>
-  
     <footer>
       <p class="footer-note">本页内容可在署名下自由传播；欢迎用于非商业教育场景。</p>
-      <p class="footer-note">© 2025 在AI时代，如何找到自我 · 课程网页</p>
+      <p class="footer-note">© 2025 在 AI 时代，如何找到自我 · 课程网页</p>
     </footer>
   </body>
 </html>
